# minirt

./: CMakeLists.txt  scene.rt
includes/: bmp.h  canvas.h  get_next_line.h  linalg.h  minirt.h  objects.h  raytrace.h  scene.h
minirt/: CMakeLists.txt  main.c  minirt.h  render.c
minirt/canvas/: canvas.c  canvas.h  color.c
minirt/linalg/: linalg.h  vecalg.c
minirt/raytrace/: ray.c  raytrace.c  raytrace.h
minirt/scene/: camera.c  light.c  scene.c  scene.h
minirt/scene/scene_objects/: object.c  objects.h  sphere.c
mlx/: mlx.h
src/: bmp.c  camera.c  canvas.c  color.c  cylinder.c  get_next_line.c  get_next_line_utils.c  intersection.c  light.c  main.c  mlx_handle.c  object.c  parse.c  parse_objects.c  parse_scene_elems.c  parse_utils_1.c  parse_utils_2.c  plane.c  ray.c  raytrace.c  render.c  scene.c  sphere.c  square.c  triangle.c  vecalg1.c  vecalg2.c
